perl (5.10.1-9) UNRELEASED; urgency=low

  * 

 -- Niko Tyni <ntyni@debian.org>  Sun, 22 Nov 2009 12:06:38 +0200

perl (5.10.1-8) unstable; urgency=medium

  * Fix another perl-suid/i386 dependency bug by using dpkg-shlibdeps
    correctly. (Closes: #556847)
  * Add Conflicts/Replaces/Provides for libthread-queue-perl.
    (Closes: #556793)

 -- Niko Tyni <ntyni@debian.org>  Sat, 21 Nov 2009 21:01:14 +0200

perl (5.10.1-7) unstable; urgency=medium

  * Only run dpkg-shlibdeps when all the shlibs files have been created.
    This fixes perl-suid dependencies on i386. (Closes: #552797)
  * Set myself as Maintainer and remove Brendan O'Dea from the control
    file at his request.
  * Make the threads-shared test suite more robust, fixing failures on hppa.
    (Closes: #554218)

 -- Niko Tyni <ntyni@debian.org>  Fri, 06 Nov 2009 22:18:07 +0200

perl (5.10.1-6) unstable; urgency=high

  * Added /me to Uploaders.
  * Apply upstream fix to resolve some crash in pattern matching against
    non-Unicode tainted string. This fixes CVE-2009-3626. (Closes: #552291)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Oct 2009 23:21:24 +0300

perl (5.10.1-5) unstable; urgency=low

  * Make DynaLoader work without Config_heavy.pl again. (Closes: #549170)

 -- Niko Tyni <ntyni@debian.org>  Thu, 01 Oct 2009 10:52:33 +0300

perl (5.10.1-4) unstable; urgency=low

  * Temporarily work around an internal compiler error in Devel::PPPort
    on ia64+gcc-4.3. (Closes: #548943)

 -- Niko Tyni <ntyni@debian.org>  Tue, 29 Sep 2009 22:28:23 +0300

perl (5.10.1-3) unstable; urgency=low

  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Fri, 25 Sep 2009 21:47:47 +0300

perl (5.10.1-2) experimental; urgency=low

  * reinstate Debian change to ExtUtils::MakeMaker for now to allow
    overriding PREFIX at installation time again. (Closes: #545904)
  * Separate Archive::Tar instance error strings from each other.
    (Closes: #539355)